# event-ticketing-system

./: .env.example  .gitignore  README.md  pyproject.toml  test_connections.py
docs/: aggregates_and_business_rules.md  api_documentation.md  ubiquitous_language_glossary.md
src/application/command_handlers/: approve_refund_handler.py  cancel_event_handler.py  check_in_ticket_handler.py  create_booking_handler.py  create_event_handler.py  create_ticket_category_handler.py  disable_ticket_category_handler.py  expire_booking_handler.py  mark_refund_paid_out_handler.py  pay_booking_handler.py  publish_event_handler.py  reject_refund_handler.py  request_refund_handler.py
src/application/commands/: approve_refund_command.py  cancel_event.py  cancel_event_command.py  check_in_ticket_command.py  create_booking_command.py  create_event.py  create_event_command.py  create_ticket_category_command.py  disable_ticket_category_command.py  expire_booking_command.py  mark_refund_paid_out_command.py  pay_booking_command.py  publish_event.py  publish_event_command.py  reject_refund_command.py  request_refund_command.py
src/application/dto/: booking_dto.py  event_dto.py  event_response_dto.py  refund_dto.py  report_dto.py  ticket_category_dto.py  ticket_dto.py
src/application/interfaces/: booking_read_repository.py  event_read_repository.py  notification_service.py  (+5 more)
src/infrastructure/: database.py
src/presentation/: dependencies.py  main.py
test/domain/: test_event.py
tests/domain/: test_booking.py  test_event.py  test_policies.py  test_refund.py  test_ticket_category.py
(+86 files in other folders)
