[project]
name = "event-ticketing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
